# vibe-to-live-agentic-rag-cohort-course

./: .env.example  .gitignore  ASSIGNMENT_CHECKLIST.md  DOCKER.md  INGESTION_FIXES.md  LICENSE  QUICKSTART.md  README.md  WEEK1_SUMMARY.md  docker-compose.yml  install_node.sh
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
.github/workflows/: docker-build-push-backend.yml  docker-build-push-frontend.yml  docker-build-push.yml
assignment-01/: main.py  rag_agent.py  vector_search.py
backend/: .dockerignore  Dockerfile  README.md  check_solution.py  docker-compose.yml  pyproject.toml  spans.csv  test_vector_search_tool.py
backend/src/: __init__.py  cli.py  config.py  main.py
backend/src/agent/: guardrails.py  models.py  rag_agent.py
backend/src/agents/: __init__.py  models.py  rag_agent.py
backend/src/evals/: data.py  generate_spans.py  llm_as_judge.py  pipeline.py
backend/src/guardrails/: input_guardrails.py
backend/src/schemas/: requests.py
backend/src/tools/: README_ASSIGNMENT.md  VECTOR_SEARCH_GUIDE.md  __init__.py  vector_search.py  vector_search_todo.py
backend/src/web/: api.py  services.py
backend/tests/: __init__.py  conftest.py  test_agent.py  test_generate_queries.py  test_llm_judge.py  test_main.py  test_phoenix_data.py  test_vector_search.py
data/fed_speeches/: metadata.json  speeches.jsonl
examples/: 01_openai_agents_basics.py  01_openai_agents_hello_world.py  02_qdrant_ingestion.py  02_qdrant_search.py  03.1_openai_agents_rag.py  03_openai_agents_tool_call.py  03_qdrant_search.py  04_docker_basics.md  04_fastapi_function.py  05_complete_rag_example.py  05_phoenix_arize_example.py  06_api_testing_guide.md  06_parallel_tool_calls.py  07_multiagent.py  07_single_agent.py  08_multiagent.py  pyproject.toml
frontend/: .dockerignore  .env.production  Dockerfile  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx  api.ts  index.css  main.tsx  types.ts
frontend/src/components/: Chat.module.css  Chat.tsx  ChatInput.module.css  ChatInput.tsx  ChatMessage.module.css  ChatMessage.tsx
scripts/: setup_qdrant.py  verify_setup.py
scripts/data_pipeline/: README.md  fetch_fed_speeches.py  ingest_fed_speeches.py  ingest_fed_speeches_overlapping.py  main.py  pyproject.toml
