[project]
name = "examples"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "arize-phoenix-otel>=0.13.1",
    "chonkie[qdrant]>=1.3.1",
    "fastapi[standard]>=0.118.0",
    "openai-agents>=0.3.3",
    "openinference-instrumentation-openai-agents>=1.3.0",
    "qdrant-client[fastembed]>=1.15.1",
]
